compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@assigning_to_undeclared_variable_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/assigning_to_undeclared_variable_fail.tapir
---
[E0001] Error: Unknown variable 'z'
   ╭─[ assigning_to_undeclared_variable_fail.tapir:3:1 ]
   │
 3 │ z = 299;
   │ ┬  
   │ ╰── Unknown variable
───╯
