compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@builtin_conflicts_with_function_fail.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/builtin_conflicts_with_function_fail.tapir
---
[E0011] Error: Function with name 'sin' already exists
   ╭─[ builtin_conflicts_with_function_fail.tapir:3:4 ]
   │
 1 │ builtin(0) fn sin(x: fix) -> fix;
   │               ─┬─  
   │                ╰─── Originally declared here
   │ 
 3 │ fn sin(x: fix) -> fix {
   │    ─┬─  
   │     ╰─── Also declared here
───╯
