compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@builtin_shadow_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/builtin_shadow_fail.tapir
---
[E0022] Error: Cannot shadow built-in variable 'frame'
   ╭─[ builtin_shadow_fail.tapir:1:5 ]
   │
 1 │ var frame = 5; # cannot shadow built-in variable
   │     ──┬──  
   │       ╰──── Cannot shadow built-in variable
   │ 
   │ Note: 'frame' is a built-in variable provided by the runtime
───╯
