compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@global_shadows_builtin_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/global_shadows_builtin_fail.tapir
---
[E0022] Error: Cannot shadow built-in variable 'frame'
   ╭─[ global_shadows_builtin_fail.tapir:1:8 ]
   │
 1 │ global frame = 0;
   │        ──┬──  
   │          ╰──── Cannot shadow built-in variable
   │ 
   │ Note: 'frame' is a built-in variable provided by the runtime
───╯
