compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@if_blocks_are_scoped_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/if_blocks_are_scoped_fail.tapir
---
Error: Unknown variable 'y'
   ╭─[if_blocks_are_scoped_fail.tapir:1:1]
   │
 5 │ y = 4;
   │ ───┬──  
   │    ╰──── Unknown variable
───╯
